# librarian

./: .gitignore  CLAUDE.md  PERF_SECURITY_PLAN.md  README.md  pyproject.toml
docs/: code-review-2026-02-24.md
src/librarian/: __init__.py  __main__.py  app.py  calendar.py  calendar_store.py  config.py  database.py  export.py  navigation.py  scanner.py  taskpaper.py  watcher.py  wikilink.py
src/librarian/actions/: __init__.py  calendar_actions.py  file_actions.py  navigation_actions.py
src/librarian/widgets/: __init__.py  banner.py  calendar_list.py  file_info.py  file_list.py  preview.py  protocols.py  tag_list.py
tests/: conftest.py  test_config.py  test_database.py  test_scanner.py
