[project]
name = "librarian"
version = "0.1.0"
description = "A Textual-based TUI application that indexes markdown files by inline hashtags"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "watchdog>=4.0.0",
]

[project.scripts]
librarian = "librarian.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian"]
